--- a/Client/about.html
+++ b/Client/about.html
@@ -9,7 +9,7 @@
             margin: 0px;
             box-sizing: border-box;
         }
-        .h1{
+        .h12{
             margin: 0px;
             width: 100%;
             height: 80px;
@@ -19,18 +19,18 @@
             justify-content: center;
             align-items: center;
         }
-        .h1 a{
+        .h12 a{
             font-size: 20px;
             text-decoration: none;
             color: black;
             margin-right:15px ;
             cursor: pointer;
         }
-        .d1{
+        .d12{
             margin: 20px 30px 0px 30px;
             text-align: center;
         }
-        .d1 h1{
+        .d12 h1{
             color: red;
             margin-bottom: 20px;
 
@@ -38,11 +38,11 @@
     </style>
 </head>
 <body>
-     <header class="h1">
-        <a href="about.html">About</a>
-        <a href="data.html">Data</a>
+     <header class="h12">
+        <a href="/about">About</a>
+        <a href="/data">Data</a>
     </header>
-    <div class="d1">
+    <div class="d12">
       <h1>About</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt nobis
