--- a/Client/data.html
+++ b/Client/data.html
@@ -39,8 +39,8 @@
 </head>
 <body>
      <header class="h1">
-        <a href="about.html">About</a>
-        <a href="data.html">Data</a>
+        <a href="/about">About</a>
+        <a href="/data">Data</a>
     </header>
     <div class="d1">
       <h1>Data</h1>
